--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <section class="container">
-        <div id="bob"></div>
-        <div id="Linda"></div>
-        <div id="Tina"></div>
-        <div id="Gene"></div>
-        <div id="louise"></div>
+        <div id="bob" class="person"></div>
+        <div id="Linda" class="person"></div>
+        <div id="Tina" class="person"></div>
+        <div id="Gene" class="person"></div>
+        <div id="louise" class="person"></div>
     </section>
 </body>
 </html>
