--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <section class="container">
-        <div id="bob" class="person"></div>
+        <div id="bob" class="person">
+            <div class="hair"></div>
+            <div class="eye"></div>
+            <div class="eye"></div>
+            <div class="moustache"></div>
+            <div class="mouth"></div>
+        </div>
         <div id="Linda" class="person"></div>
         <div id="Tina" class="person"></div>
         <div id="Gene" class="person"></div>
