Add features to others

--- a/index.html
+++ b/index.html
@@ -10,15 +10,35 @@
     <section class="container">
         <div id="bob" class="person">
             <div class="hair"></div>
-            <div class="eye"></div>
-            <div class="eye"></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
             <div class="moustache"></div>
             <div class="mouth"></div>
         </div>
-        <div id="Linda" class="person"></div>
-        <div id="Tina" class="person"></div>
-        <div id="Gene" class="person"></div>
-        <div id="louise" class="person"></div>
+        <div id="Linda" class="person">
+            <div class="hair"></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="mouth"></div>
+        </div>
+        <div id="Tina" class="person">
+            <div class="hair"></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="mouth"></div>
+        </div>
+        <div id="Gene" class="person">
+            <div class="hair"></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="mouth"></div>
+        </div>
+        <div id="louise" class="person">
+            <div class="hair"></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
+            <div class="mouth"></div>
+        </div>
     </section>
 </body>
 </html>
