--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="container">
         <div id="bob" class="person">
-            <div class="hair"></div>
+            <div class="hair bob"></div>
             <div class="eye left"></div>
             <div class="eye right"></div>
             <div class="moustache"></div>
